--- a/src/styles.css
+++ b/src/styles.css
@@ -58,18 +58,6 @@ a:hover {
     padding: 0;
 }
 
-#root {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-}
-
-/*#app-root,*/
-/*.sigma-container {*/
-/*    position: absolute;*/
-/*    inset: 0;*/
-/*}*/
-
 .controls {
     position: absolute;
     bottom: var(--stage-padding);
@@ -372,4 +360,19 @@ ul > li {
     button.hide-contents {
         display: none !important;
     }
+}
+
+#clustersLayer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.clusterLabel {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    font-family: sans-serif;
+    font-variant: small-caps;
+    font-weight: 400;
+    font-size: 1.8rem;
+    text-shadow: 2px 2px 1px white, -2px -2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
 }
